Frontend FIX new device form being broken on smaller screens

--- a/frontend/components/shared/add-device-form/add-device-form.component.scss
+++ b/frontend/components/shared/add-device-form/add-device-form.component.scss
@@ -1,2 +1,6 @@
 @import "../../../colors";
 @import "../../../styles/inputs";
+
+.nc-label {
+  min-width: 105px;
+}
