--- a/frontend/styles/_inputs.scss
+++ b/frontend/styles/_inputs.scss
@@ -28,7 +28,7 @@
 .nc-label {
   text-align: right;
   margin-right: 10px;
-  font-size: 16px;
+  font-size: 14px;
   color: $colorText;
 }
 
